animation scroll top winner

--- a/src/common/components/TopWinner/styles.module.scss
+++ b/src/common/components/TopWinner/styles.module.scss
@@ -1,6 +1,35 @@
 .top-winner {
     position: absolute;
-    background-color: red;
     width: 100%;
+    height: 1.6rem;
+    background: rgba(15, 16, 29, 0.5);
     z-index: var(--layer-top-winner);
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 8rem;
+        height: 100%;
+        background: linear-gradient(90deg, rgba(255, 199, 28, 0.32) 0%, rgba(255, 199, 28, 0) 100%);
+    }
+}
+
+.wrapper {
+    height: 100%;
+    display: flex;
+}
+
+.label {
+    flex-shrink: 0;
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
+
+    font-size: 0.8rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 0 0.6rem;
+    opacity: 0.8;
 }
