--- a/src/common/components/TopWinner/Content/styles.module.scss
+++ b/src/common/components/TopWinner/Content/styles.module.scss
@@ -7,4 +7,16 @@
     padding-right: 0.6rem;
 
     overflow-y: auto;
+
+    animation: show-content 0.5s forwards;
+}
+
+@keyframes show-content {
+    from {
+        transform: translateX(100%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
 }
