update width menu

--- a/src/common/menus/Panel/styles.module.scss
+++ b/src/common/menus/Panel/styles.module.scss
@@ -42,7 +42,7 @@
 .mobile-landscape {
     &.menu-content {
         height: 100%;
-        width: min-content;
+        width: 50%;
         min-width: 50%;
         max-width: 100%;
         top: 0;
