--- a/src/common/components/Button/styles.module.scss
+++ b/src/common/components/Button/styles.module.scss
@@ -4,11 +4,11 @@
     opacity: var(--opacity);
 
     scale: 1;
-    transition: scale 0.3;
+    transition: scale 0.3s;
 
-    &:active:not(:disabled) {
+    &.animate:active:not(:disabled) {
         scale: 0.85;
-        transition: scale 0.3;
+        transition: scale 0.3s;
     }
 
     &:disabled {
