--- a/src/game/components/TableBet/ButtonBet/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/styles.module.scss
@@ -11,7 +11,7 @@
     transition: all 1s linear;
 
     &.win {
-        border: 0.2rem solid #83ff48 !important;
+        border: 0.1rem solid #83ff48 !important;
         animation: win-glow 1s infinite ease-in-out;
         z-index: 2;
     }
@@ -94,13 +94,19 @@
 
 @keyframes win-glow {
     0% {
-        box-shadow: 0 0 0.1rem #83ff48;
+        box-shadow:
+            0 0 0.1rem #83ff48,
+            0px 0px 0 0px #83ff48 inset;
     }
     50% {
-        box-shadow: 0 0 0.8rem #83ff48;
+        box-shadow:
+            0 0 0.1rem #83ff48,
+            0px 0px 0.8rem 0px #83ff48 inset;
     }
     100% {
-        box-shadow: 0 0 0.1rem #83ff48;
+        box-shadow:
+            0 0 0.1rem #83ff48,
+            0px 0px 0 0px #83ff48 inset;
     }
 }
 
