--- a/src/common/menus/Panel/styles.module.scss
+++ b/src/common/menus/Panel/styles.module.scss
@@ -42,9 +42,7 @@
 .mobile-landscape {
     &.menu-content {
         height: 100%;
-        width: 50%;
-        min-width: 50%;
-        max-width: 100%;
+        width: 36rem;
         top: 0;
 
         &.layout-1 {
