--- a/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
+++ b/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
@@ -38,3 +38,13 @@
     font-size: 400;
     color: #c8c9db;
 }
+
+.shading {
+    background: repeating-linear-gradient(
+        -45deg,
+        transparent,
+        transparent 2px,
+        #2c2d3f 6px,
+        #2c2d3f 6px
+    );
+}
