--- a/src/common/components/Game/styles.module.scss
+++ b/src/common/components/Game/styles.module.scss
@@ -4,6 +4,16 @@
         position: relative;
         width: 100%;
         height: 100%;
+
+        &.box {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: var(--width-game-px);
+            height: var(--height-game-px);
+            transform: translateX(-50%) translateY(-50%);
+            overflow: hidden;
+        }
     }
 }
 
