--- a/src/common/components/ChipDeck/_v2.scss
+++ b/src/common/components/ChipDeck/_v2.scss
@@ -1,9 +1,13 @@
+.chip-deck {
+    --size-chip: 2.55rem;
+    --chip-scale: 1.1;
+}
+
 .mobile-portrait {
     &.v2 {
         &.chip-deck {
-            // background-color: red;
             --gap: 0.75rem;
-            --offset: 0.75rem;
+            --offset: 0.4rem;
 
             position: relative;
 
@@ -14,7 +18,7 @@
                 gap: var(--gap);
                 padding: var(--offset) 0;
 
-                border: 0.1rem solid rgba(255, 255, 255, 0.16);
+                outline: 0.1rem solid rgba(255, 255, 255, 0.16);
             }
 
             .wrapper {
@@ -22,7 +26,7 @@
 
                 overflow: auto;
 
-                height: calc((2.2rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
+                height: calc((var(--size-chip) * 5) + (var(--gap) * 4) + (var(--offset) * 2));
 
                 border-radius: 3.4rem;
                 background: rgba(0, 0, 0, 0.32);
@@ -36,9 +40,8 @@
 .mobile-landscape {
     &.v2 {
         &.chip-deck {
-            // background-color: red;
             --gap: 0.75rem;
-            --offset: 0.75rem;
+            --offset: 0.4rem;
 
             position: relative;
 
@@ -48,7 +51,7 @@
                 gap: var(--gap);
                 padding: 0 var(--offset);
 
-                border: 0.1rem solid rgba(255, 255, 255, 0.16);
+                outline: 0.1rem solid rgba(255, 255, 255, 0.16);
             }
 
             .wrapper {
@@ -56,7 +59,7 @@
 
                 overflow: auto;
 
-                width: calc((2.2rem * 5) + (var(--gap) * 4) + (var(--offset) * 2) + 0.1rem);
+                width: calc((var(--size-chip) * 5) + (var(--gap) * 4) + (var(--offset) * 2));
 
                 border-radius: 3.4rem;
                 background: rgba(0, 0, 0, 0.32);
