add shading in table transaction history

--- a/src/common/menus/Items/Transactions/Card/BettingTable/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Card/BettingTable/styles.module.scss
@@ -32,6 +32,10 @@
     tr.win {
         background: rgba(59, 232, 0, 0.16);
     }
+
+    td.shading {
+        background: var(--bg-shading);
+    }
 }
 
 .bigger {
