--- a/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
+++ b/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
@@ -40,11 +40,5 @@
 }
 
 .shading {
-    background: repeating-linear-gradient(
-        -45deg,
-        transparent,
-        transparent 2px,
-        #2c2d3f 6px,
-        #2c2d3f 6px
-    );
+    background: var(--bg-shading);
 }
