--- a/src/game/components/RoadMap/roadmap-portrait.module.scss
+++ b/src/game/components/RoadMap/roadmap-portrait.module.scss
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: column;
     padding-inline: 1rem;
+    height: -webkit-fill-available;
+    height: -moz-available;
+    height: fill-available;
 }
 
 .scrolledYRoadmap {
@@ -12,6 +15,9 @@
     overflow-x: scroll;
     overflow-y: hidden;
     display: flex;
+    height: -webkit-fill-available;
+    height: -moz-available;
+    height: fill-available;
 }
 
 .scrolledYRoadmap.zoom {
