--- a/src/game/components/RoadMap/roadmap-portrait.module.scss
+++ b/src/game/components/RoadMap/roadmap-portrait.module.scss
@@ -4,6 +4,7 @@
     padding-inline: 1rem;
     height: -webkit-fill-available;
     height: -moz-available;
+    height: -moz-fill-available;
     height: fill-available;
 }
 
@@ -17,6 +18,7 @@
     display: flex;
     height: -webkit-fill-available;
     height: -moz-available;
+    height: -moz-fill-available;
     height: fill-available;
 }
 
