--- a/src/game/components/RoadMap/roadmap-portrait.module.scss
+++ b/src/game/components/RoadMap/roadmap-portrait.module.scss
@@ -6,6 +6,8 @@
     height: -moz-available;
     height: -moz-fill-available;
     height: fill-available;
+    height: 100%;
+
 }
 
 .scrolledYRoadmap {
@@ -20,6 +22,7 @@
     height: -moz-available;
     height: -moz-fill-available;
     height: fill-available;
+    height: 100%;
 }
 
 .scrolledYRoadmap.zoom {
