--- a/src/common/components/ChipDeck/_v1.scss
+++ b/src/common/components/ChipDeck/_v1.scss
@@ -1,13 +1,15 @@
-.chip-deck {
-    --size-chip: 2.55rem;
-    --chip-scale: 1.1;
+.v1 {
+    &.chip-deck {
+        --size-chip: 2.8rem;
+        --chip-scale: 1;
+    }
 }
 
 .mobile-portrait {
     &.v1 {
         &.chip-deck {
-            --gap: 0.75rem;
-            --offset: 0.4rem;
+            --gap: 0.65rem;
+            --offset: 0.375rem;
 
             position: relative;
 
@@ -39,8 +41,8 @@
 .mobile-landscape {
     &.v1 {
         &.chip-deck {
-            --gap: 0.75rem;
-            --offset: 0.4rem;
+            --gap: 0.65rem;
+            --offset: 0.375rem;
 
             position: relative;
 
