--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -6,12 +6,12 @@
 
     display: flex;
     flex-direction: column;
-    gap: 0.4rem;
+    gap: 0.3rem;
     transition: all 0.3s linear;
 
     align-items: center;
 
-    width: 3.4rem;
+    width: var(--button-action-size);
 
     &.disapear {
         transition: all 0.3s linear;
@@ -20,8 +20,8 @@
 
 .icon {
     display: flex;
-    width: 3.4rem;
-    height: 3.4rem;
+    width: var(--button-action-size);
+    height: var(--button-action-size);
     justify-content: center;
     align-items: center;
 
@@ -36,8 +36,8 @@
     }
 
     svg {
-        width: 2rem;
-        height: 2rem;
+        width: 57.8%;
+        height: 57.8%;
     }
 }
 
