--- a/src/common/components/ChipDeck/_v2.scss
+++ b/src/common/components/ChipDeck/_v2.scss
@@ -1,6 +1,6 @@
 .v2 {
     &.chip-deck {
-        --size-chip: 2.8rem;
+        --size-chip: 3.2rem;
         --chip-scale: 1;
     }
 }
@@ -8,8 +8,8 @@
 .mobile-portrait {
     &.v2 {
         &.chip-deck {
-            --gap: 0.65rem;
-            --offset: 0.375rem;
+            --gap: 0.5rem;
+            --offset: 0.25rem;
 
             position: relative;
 
@@ -24,13 +24,13 @@
             }
 
             .wrapper {
-                width: 3.4rem;
+                width: var(--button-action-size);
 
                 overflow: auto;
 
                 height: calc((var(--size-chip) * 5) + (var(--gap) * 4) + (var(--offset) * 2));
 
-                border-radius: 3.4rem;
+                border-radius: var(--button-action-size);
                 background: rgba(0, 0, 0, 0.32);
                 backdrop-filter: blur(0.6rem);
             }
@@ -42,8 +42,8 @@
 .mobile-landscape {
     &.v2 {
         &.chip-deck {
-            --gap: 0.65rem;
-            --offset: 0.375rem;
+            --gap: 0.5rem;
+            --offset: 0.25rem;
 
             position: relative;
 
@@ -57,13 +57,13 @@
             }
 
             .wrapper {
-                height: 3.4rem;
+                height: var(--button-action-size);
 
                 overflow: auto;
 
                 width: calc((var(--size-chip) * 5) + (var(--gap) * 4) + (var(--offset) * 2));
 
-                border-radius: 3.4rem;
+                border-radius: var(--button-action-size);
                 background: rgba(0, 0, 0, 0.32);
                 backdrop-filter: blur(0.6rem);
             }
