--- a/src/common/layouts/v1/PanelRight/style.module.scss
+++ b/src/common/layouts/v1/PanelRight/style.module.scss
@@ -4,7 +4,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    gap: 0.8rem;
+    padding-top: 0.8rem;
 }
