--- a/src/game/components/MobilePortraitWild/table-bet-portrait.module.scss
+++ b/src/game/components/MobilePortraitWild/table-bet-portrait.module.scss
@@ -24,6 +24,7 @@ $childBetM23Width : calc(98%/2);
     $anim-duration: 0s;
     display: flex;
     flex-direction: column-reverse;
+
     &.open {
         transform: $transformOpen;
         animation: openTable;
@@ -51,7 +52,8 @@ $childBetM23Width : calc(98%/2);
     justify-content: center;
     flex-direction: column;
     height: 100%;
-    transform: translateY(2rem);}
+    transform: translateY(2rem);
+}
 
 .container {
 
@@ -213,31 +215,38 @@ $childBetM23Width : calc(98%/2);
     margin-top: 6vw;
     position: absolute;
     bottom: 0;
-
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    letter-spacing: 0.09px;
+    text-transform: uppercase;
     span.text_lg {
         padding-right: 1rem;
         padding-left: 1rem;
         opacity: 1;
-
+ 
     }
-    
+
     span {
-        font-weight: bold;
         opacity: 0.75;
         text-transform: uppercase;
     }
 }
 
 .tieLabel {
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    letter-spacing: 0.09px;
+    text-transform: uppercase;
     span.text_lg {
         padding-right: 1rem;
         padding-left: 1rem;
         opacity: 1;
 
     }
-    
+
     span {
-        font-weight: bold;
         opacity: 0.75;
         text-transform: uppercase;
     }
@@ -353,9 +362,9 @@ $childBetM23Width : calc(98%/2);
         // padding-inline: 1.5rem;
 
         flex-direction: row-reverse;
-      
+
         &>span {
-         
+
 
             &>div {
                 margin-left: 0.75rem;
@@ -375,13 +384,17 @@ $childBetM23Width : calc(98%/2);
     align-items: center;
     align-self: center;
     z-index: 1;
-
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+    letter-spacing: 0.09px;
+    text-transform: uppercase;
     &>span.text_lg {
         opacity: 1;
     }
+
     &>span {
         opacity: 0.75;
-        font-weight: bold;
         padding-right: 1rem;
         text-transform: uppercase;
     }
