--- a/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
+++ b/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
@@ -3,8 +3,8 @@
 $maxY: -30%;
 // $domainHeight: 32vh;
 $domainHeight: 33vw;
-$transformOpen: translate(-50%, -40%) scale(0.45);
-$transformClose: perspective(calc(800px * var(--scale-height))) rotateX(40deg) translateZ(0) scale(1);
+$transformOpen: translate(0%, 0%) scale(1);
+$transformClose: translate(0%, 40%) scale(0.75, 0.75) perspective(1000px) rotateX(45deg);;
 $transformCloseZoom: translate(-50%, calc(-50%)) scale(0.6);
 
 $childBetM23Width : calc(98.5%/2);
@@ -22,7 +22,7 @@ $childBetM23Width : calc(98.5%/2);
         transform: $transformOpen;
         animation: openTable;
         animation-duration: $anim-duration;
-        bottom: -60%;
+        // bottom: -60%;
 
     }
 
