update shuffling card

--- a/src/common/components/Alerts/NewSet/ShufflingAnimation/styles.module.scss
+++ b/src/common/components/Alerts/NewSet/ShufflingAnimation/styles.module.scss
@@ -6,4 +6,42 @@
 
     width: 10rem;
     height: 10rem;
+
+    animation: fadein 0.45s linear forwards;
+
+    &.disapear {
+        animation: fadeout 0.45s linear forwards;
+    }
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+        scale: 0;
+    }
+
+    80% {
+        scale: 1;
+    }
+
+    100% {
+        opacity: 1;
+        scale: 1;
+    }
+}
+
+@keyframes fadeout {
+    0% {
+        opacity: 1;
+        scale: 1;
+    }
+
+    80% {
+        scale: 0;
+    }
+
+    100% {
+        opacity: 0;
+        scale: 0;
+    }
 }
