--- a/src/common/components/Alerts/NewSet/Message/styles.module.scss
+++ b/src/common/components/Alerts/NewSet/Message/styles.module.scss
@@ -5,7 +5,7 @@
     left: 50%;
     top: calc(var(--height-streaming) * 1px);
 
-    transform: translateX(var(--translate-x)) translateY(-100%);
+    transform: translateX(var(--translate-x)) translateY(-2rem);
 
     // width: 22rem;
     width: 27.8rem;
