--- a/src/common/components/Alerts/NewSet/ShufflingAnimation/styles.module.scss
+++ b/src/common/components/Alerts/NewSet/ShufflingAnimation/styles.module.scss
@@ -1,8 +1,5 @@
 .container {
     position: absolute;
-    left: 50%;
-    bottom: calc(var(--height-footer) + 9.4rem);
-    translate: -50% 0;
 
     width: 10rem;
     height: 10rem;
@@ -12,6 +9,21 @@
     &.disapear {
         animation: fadeout 0.45s linear forwards;
     }
+}
+
+.mobile-portrait {
+    &.container {
+        left: 50%;
+        bottom: calc(var(--height-footer) + 9.4rem);
+        translate: -50% 0;
+    }
+}
+
+.desktop,
+.mobile-landscape {
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
 }
 
 @keyframes fadein {
