--- a/src/common/components/TopWinner/styles.module.scss
+++ b/src/common/components/TopWinner/styles.module.scss
@@ -2,18 +2,18 @@
     position: absolute;
     width: 100%;
     height: 1.6rem;
-    background: rgba(15, 16, 29, 0.5);
+    background: rgba(15, 16, 29, 0.65);
     z-index: var(--layer-top-winner);
 
     transform: translateY(-100%);
     opacity: 0;
 
     &.show {
-        animation: top-winner-show 0.5s forwards;
+        animation: top-winner-show 0.4s forwards;
     }
 
     &.hide {
-        animation: top-winner-hide 0.5s forwards;
+        animation: top-winner-hide 0.4s forwards;
     }
 
     &::after {
@@ -46,24 +46,28 @@
 }
 
 @keyframes top-winner-show {
-    from {
+    0% {
         transform: translateY(-100%);
         opacity: 0;
     }
 
-    to {
+    80% {
+        opacity: 1;
+    }
+
+    100% {
         transform: translateY(0);
         opacity: 1;
     }
 }
 
 @keyframes top-winner-hide {
-    from {
+    0% {
         transform: translateY(0);
         opacity: 1;
     }
 
-    to {
+    100% {
         transform: translateY(-100%);
         opacity: 0;
     }
