--- a/src/common/menus/Items/Transactions/Card/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Card/styles.module.scss
@@ -1,10 +1,15 @@
 .card {
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
+    display: grid;
+    grid-template-rows: min-content 0fr;
     cursor: pointer;
     border: 0.1rem solid #343547;
-    transition: background-color 0.4s linear;
+
+    transition:
+        background-color 0.4s,
+        grid-template-rows 0.4s;
 
     &:first-child {
         border-radius: 0.8rem 0.8rem 0 0;
@@ -16,6 +21,6 @@
 
     &.expand {
         background: #1e1f2e;
-        transition: background-color 0.4s linear;
+        grid-template-rows: min-content 1fr;
     }
 }
