--- a/src/common/components/ResizeOverlay/styles.module.scss
+++ b/src/common/components/ResizeOverlay/styles.module.scss
@@ -6,4 +6,20 @@
     height: 100%;
     background-color: black;
     z-index: 100;
+    animation: overlay-animation 0.35s forwards;
+}
+
+@keyframes overlay-animation {
+    0% {
+        opacity: 0;
+    }
+
+    20%,
+    80% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
