update style htp how to play

--- a/src/common/menus/Items/HowToPlay/Components/styles.module.scss
+++ b/src/common/menus/Items/HowToPlay/Components/styles.module.scss
@@ -9,11 +9,20 @@
     line-height: 1.2;
 }
 
+.heading-3 {
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin-block: 1rem;
+    line-height: 1.2;
+    color: #1a73e8;
+}
+
 .text-htp {
     color: #c8c9db;
     font-size: 1.1rem;
     font-weight: 300;
-    line-height: 1.6rem;
+    line-height: 1.5rem;
+    margin-block: 0.4rem;
 }
 
 .htp-list {
