fix dragon tiger label not show

--- a/src/game/components/MobilePortraitWild/table-bet-portrait.module.scss
+++ b/src/game/components/MobilePortraitWild/table-bet-portrait.module.scss
@@ -199,7 +199,7 @@ $childBetM23Width : calc(98%/2);
     position: absolute;
     padding-inline: 1rem 1rem;
     padding-block: 0.5rem;
-    height: 28%;
+    height: 9rem;
 
     &>div:nth-child(1) {
         margin-top: 0 !important;
