--- a/src/game/components/ResultDTWildTransaction/styles.module.scss
+++ b/src/game/components/ResultDTWildTransaction/styles.module.scss
@@ -16,7 +16,7 @@
     border: none;
     background: #1E1F2E;
 
-    & > svg {
+    &>svg {
         width: 6.5rem;
         height: 6.5rem;
     }
@@ -44,4 +44,98 @@
         font-weight: 700;
         letter-spacing: -0.0352rem;
     }
+}
+
+
+.triangle_container {
+    position: relative;
+    width: 200px;
+    /* Adjust the width as needed */
+    height: 100px;
+    /* Adjust the height as needed */
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.triangle_border {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: calc(100% - 2px);
+    /* Adjust to match the border width */
+    height: calc(100% - 2px);
+    /* Adjust to match the border width */
+    clip-path: polygon(0 100%, 100% 0, 100% 100%);
+    background-color: #4C4D66;
+    /* Red border color */
+    border-radius: 2px 2px 2px 2px;
+}
+
+.triangle {
+    position: absolute;
+    bottom: 0.6px;
+    right: 0.6px;
+    width: calc(100% - 4.6px);
+    height: calc(100% - 4.6px);
+    /* Adjust to match the border width */
+    border-radius: 2px 2px 2px 2px;
+
+    clip-path: polygon(0 100%, 100% 0, 100% 100%);
+    background-image: linear-gradient(180deg, #42445F 1.58%, #2F3046 100%);
+}
+
+.triangle_border.win {
+    border: 0.6px solid rgba(1, 203, 167, 1)
+}
+
+.triangle.win {
+    background-image: linear-gradient(0deg, #01CBA7 -13.46%, rgba(1, 203, 167, 0) 99.77%);
+
+}
+
+.triangle_border_1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: calc(100% - 2px);
+    /* Adjust to match the border width */
+    height: calc(100% - 2px);
+    /* Adjust to match the border width */
+    clip-path: polygon(0 0, 100% 0, 0 100%);
+    background-color: #4C4D66;
+    border-radius: 2px 2px 2px 2px;
+
+}
+
+.triangle_1 {
+    position: absolute;
+    top: 0.6px;
+    left: 0.6px;
+    width: calc(100% - 4.6px);
+    height: calc(100% - 4.6px);
+    border-radius: 2px 2px 2px 2px;
+    /* Adjust to match the border width */
+    clip-path: polygon(0 0, 100% 0, 0 100%);
+    background-image: linear-gradient(180deg, #42445F 1.58%, #2F3046 100%);
+}
+
+.triangle_border_1.win {
+    border: 0.6px solid rgba(0, 164, 234, 1);
+}
+
+.triangle_1.win {
+    background-image: linear-gradient(0deg, #00A4EA 0.23%, rgba(0, 164, 234, 0) 122.17%);
+
+}
+
+.triangle_1,.triangle {
+    span {
+        text-shadow: 0px 0.0352rem 0.0938rem rgba(0, 0, 0, 0.32);
+        font-family: Manrope;
+        font-size: 1.1rem;
+        font-weight: 700;
+        letter-spacing: -0.0352rem;
+        color: white;
+        }
 }
