fix font weight

--- a/src/game/components/ResultDTWildTransaction/styles.module.scss
+++ b/src/game/components/ResultDTWildTransaction/styles.module.scss
@@ -86,7 +86,7 @@
 }
 
 .triangle_border.win {
-    background-color:  rgba(1, 203, 167, 1);
+    background-color: rgba(1, 203, 167, 1);
 }
 
 .triangle.win {
@@ -129,13 +129,21 @@
 
 }
 
-.triangle_1,.triangle {
+.triangle_1,
+.triangle {
     span {
-        text-shadow: 0px 0.0352rem 0.0938rem rgba(0, 0, 0, 0.32);
+
+        color: rgb(255, 255, 255);
+        text-align: center;
+        text-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px;
         font-family: Manrope;
         font-size: 1.1rem;
-        font-weight: 700;
-        letter-spacing: -0.0352rem;
-        color: white;
-        }
+        font-style: normal;
+        font-weight: 800;
+        line-height: normal;
+        letter-spacing: 0.11px;
+        text-transform: uppercase;
+        padding: 0px;
+        margin: 0px;
+    }
 }
