--- a/src/game/components/HowToPlayContent/Items/BetDescription/styles.module.scss
+++ b/src/game/components/HowToPlayContent/Items/BetDescription/styles.module.scss
@@ -20,14 +20,14 @@
 
 .bet-name {
     font-size: 1.1rem;
-    font-weight: 500;
+    font-weight: 700;
     color: #fff;
     text-transform: uppercase;
 }
 
 .winning-title {
     margin-top: 1rem;
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: #fff;
     font-weight: 400;
 }
@@ -40,6 +40,7 @@
 .example-table {
     width: 100%;
     border-collapse: collapse;
+    font-size: 1.1rem;
 
     thead tr {
         border: 0.1rem solid #414362;
@@ -62,14 +63,16 @@
     }
 }
 
+.win,
+.lose {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
 .win {
     color: #54d725;
-    text-transform: uppercase;
-    font-weight: 500;
 }
 
 .lose {
     color: #e0326f;
-    text-transform: uppercase;
-    font-weight: 500;
 }
