--- a/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
+++ b/src/game/components/MobilePortraitWild/table-bet-landscape.module.scss
@@ -405,9 +405,11 @@ $childBetM23Width : calc(98.5%/2);
 
 .cardContainerWild {
     position: absolute;
-    // top: -3rem;
-    top: -135%;
-    left: 43%;
+    top: -20%;
+    // top: -135%;
+    // bottom: 17rem;
+
+    left: 47.5%;
     margin: auto;
     // right: auto;
     // left: -4rem;
