--- a/src/common/menus/Items/Payout/PayoutContent/PayoutNote/styles.module.scss
+++ b/src/common/menus/Items/Payout/PayoutContent/PayoutNote/styles.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
+    margin-top: 1rem;
 
     border-radius: 0.5rem;
     border: 0.05rem solid rgba(255, 199, 0, 0.12);
