--- a/src/common/components/Button/styles.module.scss
+++ b/src/common/components/Button/styles.module.scss
@@ -5,6 +5,9 @@
 
     scale: 1;
     transition: scale 0.3s;
+    padding-block: 0;
+    padding-inline: 0;
+    border: 0;
 
     &.animate:active:not(:disabled) {
         scale: 0.85;
