--- a/src/common/components/MiniHowToPlay/Slider/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Slider/styles.module.scss
@@ -1,11 +1,10 @@
 .slider {
-    width: 31.2rem;
-
+    width: calc(var(--width-modal-mini-htp) - 1.6rem);
     display: grid;
-    grid-template-columns: repeat(var(--column), 31.2rem);
+    grid-template-columns: repeat(var(--column), calc(var(--width-modal-mini-htp) - 1.6rem));
     grid-template-rows: repeat(3, auto);
     row-gap: 1.6rem;
-    column-gap: 1.6rem;
+    // column-gap: 1.6rem;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
 }
