--- a/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
@@ -10,6 +10,17 @@
     align-items: center;
     padding: 0;
     gap: 0.4rem;
+
+    opacity: 0;
+    visibility: hidden;
+
+    &.show {
+        animation: showAnimation 0.2s forwards;
+    }
+
+    &.hide {
+        animation: hideAnimation 0.2s forwards;
+    }
 }
 
 .button svg {
@@ -23,4 +34,29 @@
     font-size: 1.2rem;
     font-weight: 400;
     letter-spacing: 0.012rem;
+}
+
+@keyframes showAnimation {
+    0% {
+        visibility: hidden;
+        opacity: 0;
+    }
+    1% {
+        visibility: visible;
+    }
+    100% {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+@keyframes hideAnimation {
+    0% {
+        visibility: visible;
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
 }
