--- a/src/common/components/MiniHowToPlay/Modal/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/styles.module.scss
@@ -1,8 +1,10 @@
 .modal {
+    --width-modal-mini-htp: 34rem;
+
     position: relative;
-    width: 34rem;
+    width: var(--width-modal-mini-htp);
     background: rgba(0, 0, 0, 0.8);
-    padding: 2.4rem 1.6rem 2rem;
+    padding: 2.4rem 0.8rem 2rem;
     border-radius: 1.6rem;
     animation: open-modal 0.4s forwards;
 
