--- a/src/common/components/ChipDeck/_v1.scss
+++ b/src/common/components/ChipDeck/_v1.scss
@@ -28,7 +28,10 @@
                 overflow: auto;
 
                 // width: calc((var(--size-chip) * 5) + (var(--gap) * 4) + (var(--offset) * 2));
-                width: calc((var(--size-chip) * 4) + (var(--gap) * 3) + (var(--offset) * 2));
+                width: calc(
+                    (var(--size-chip) * 4) + (var(--gap) * 4) + (var(--size-chip) * 30 / 100) +
+                        (var(--offset) * 2)
+                );
 
                 border-radius: var(--button-action-size);
                 background: rgba(0, 0, 0, 0.32);
@@ -62,8 +65,11 @@
 
                 overflow: auto;
 
-                // height: calc((var(--size-chip) * 4) + (var(--gap) * 3) + (var(--offset) * 2));
-                height: 13.8rem;
+                height: calc(
+                    (var(--size-chip) * 3) + (var(--gap) * 3) + (var(--size-chip) * 40 / 100) +
+                        (var(--offset) * 2)
+                );
+                // height: 13.8rem;
 
                 border-radius: var(--button-action-size);
                 background: rgba(0, 0, 0, 0.32);
