--- a/src/common/components/TopWinner/styles.module.scss
+++ b/src/common/components/TopWinner/styles.module.scss
@@ -2,8 +2,9 @@
     position: absolute;
     width: 100%;
     height: 1.6rem;
-    background: rgba(15, 16, 29, 0.65);
+    background: rgba(15, 16, 29, 0.7);
     z-index: var(--layer-top-winner);
+    pointer-events: none;
 
     transform: translateY(-100%);
     opacity: 0;
