--- a/src/common/menus/Items/Transactions/Previous/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Previous/styles.module.scss
@@ -1,12 +1,18 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 1.2rem;
+    gap: 1.6rem;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
 }
 
 .date {
     font-size: 1.4rem;
-    font-weight: 700;
+    font-weight: 600;
     letter-spacing: 0.028rem;
-    padding-left: 1.2rem;
+    padding-left: 0.8rem;
 }
