--- a/src/common/menus/Panel/styles.module.scss
+++ b/src/common/menus/Panel/styles.module.scss
@@ -30,10 +30,10 @@
 
         box-shadow: 0 -0.4rem 1.2rem rgba(0, 0, 0, 0.3);
 
-        animation: menu-open-up 0.65s forwards;
+        animation: menu-open-up 0.5s forwards;
 
         &.disappear {
-            animation: menu-close-down 0.75s forwards;
+            animation: menu-close-down 0.65s forwards;
         }
     }
 }
@@ -50,10 +50,10 @@
 
             box-shadow: 0.4rem 0 1.2rem rgba(0, 0, 0, 0.3);
 
-            animation: menu-open-right 0.65s forwards;
+            animation: menu-open-right 0.4s forwards;
 
             &.disappear {
-                animation: menu-close-left 0.75s forwards;
+                animation: menu-close-left 0.4s forwards;
             }
         }
 
@@ -62,10 +62,10 @@
 
             box-shadow: -0.4rem 0 1.2rem rgba(0, 0, 0, 0.3);
 
-            animation: menu-open-left 0.65s forwards;
+            animation: menu-open-left 0.4s forwards;
 
             &.disappear {
-                animation: menu-close-right 0.75s forwards;
+                animation: menu-close-right 0.4s forwards;
             }
         }
     }
@@ -73,7 +73,7 @@
 
 @keyframes menu-open-up {
     0% {
-        transform: translateY(100rem);
+        transform: translateY(50rem);
     }
     100% {
         transform: translateY(0);
@@ -94,13 +94,13 @@
         transform: translateX(0);
     }
     100% {
-        transform: translateX(100rem);
+        transform: translateX(100%);
     }
 }
 
 @keyframes menu-open-left {
     0% {
-        transform: translateX(100rem);
+        transform: translateX(100%);
     }
     100% {
         transform: translateX(0);
@@ -112,13 +112,13 @@
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-100rem);
+        transform: translateX(-100%);
     }
 }
 
 @keyframes menu-open-right {
     0% {
-        transform: translateX(-100rem);
+        transform: translateX(-100%);
     }
     100% {
         transform: translateX(0);
