--- a/src/common/components/Streaming/styles.module.scss
+++ b/src/common/components/Streaming/styles.module.scss
@@ -68,7 +68,7 @@
             position: absolute;
             bottom: calc(var(--height-footer) * -1);
             height: calc(100% + var(--height-footer));
-            width: 18%;
+            width: var(--width-overlay-streaming-landscape);
             z-index: 1;
         }
 
@@ -88,7 +88,7 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 31%;
+        height: var(--height-overlay-streaming-landscape);
 
         background: var(--streaming-color-6);
     }
