--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -7,6 +7,8 @@
     // setting streaming scale in portrait
     --streaming-scale-portrait: 1.1;
     --height-overlay-streaming-portrait: 4.8rem;
+    --width-overlay-streaming-landscape: 12rem;
+    --height-overlay-streaming-landscape: 11rem;
 
     // portrait, streaming ke bawah
     --streaming-color-1: linear-gradient(180deg, #854c07 0%, #533909 40.22%, #0e0901 100%);
