update style bet

--- a/src/game/components/TableBet/ButtonBet/BetColRow/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/BetColRow/styles.module.scss
@@ -14,7 +14,7 @@
 }
 
 .payout {
-    color: #a57a30;
+    color: rgba(88, 62, 17, 0.36);
     font-size: 0.8rem;
     font-weight: 700;
     letter-spacing: -0.016rem;
